tests/codegen/errors/reader/reader/numeric.radix.out-of-range.low/atom.menu.error.reader.numeric.radix.out-of-range.low.000/menu-reader-numeric.radix.out-of-range.low-000.mon
;; TEST-ID: tests.codegen.menu.errors.reader.numeric.radix.out.of.range.low.000
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: errors
;; TEST-SUBSET: reader/numeric.radix.out-of-range.low
;; TEST-MENU: errors/reader/numeric.radix.out-of-range.low/atom.menu.error.reader.numeric.radix.out-of-range.low.000
;; TEST-MENU-PATH: codegen/errors/reader/numeric.radix.out-of-range.low/atom.menu.error.reader.numeric.radix.out-of-range.low.000
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.error-menu
;; TEST-PURPOSE: Pin reader.c diagnostic: radix 1 out of range
;; TEST-ATOM: atom.menu.error.reader.numeric.radix.out-of-range.low.000
;; TEST-CODEGEN-ATOM: atom.menu.error.reader.numeric.radix.out-of-range.low.000
;; TEST-ATOM-LEAF: atom.menu.error.reader.numeric.radix.out-of-range.low.000
;; TEST-QUALITY: menu-error-diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-ERROR-STAGE: reader
;; TEST-ERROR-FAMILY: numeric.radix.out-of-range.low
;; TEST-ERROR-MESSAGE: radix 1 out of range
;; TEST-ERROR-SOURCE: reader.c
;; TEST-ERROR-PATH: reader.c:1534
;; TEST-CODEGEN-PATH: diagnostic.reader.numeric.radix.out-of-range.low
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-TAG: menu
;; TEST-COVERAGE: reader.c:1534 radix 1 out of range
;; TEST-USES-ATOM: atom.menu.error.reader.numeric.radix.out-of-range.low.000
;; TEST-USES-ATOM: atom.error.reader
;; TEST-USES-ATOM: atom.error.reader.numeric.radix.out-of-range.low
;; TEST-USES-ATOM: atom.reader.error
;; TEST-DEPENDS-ON: atom.reader.lex.parse
;; TEST-REFINES: atom.error.reader
;; TEST-REFINES: atom.error.reader.numeric.radix.out-of-range.low
;; TEST-REFINES: atom.reader.error
;; TEST-RELATED: atom.codegen.error.menu
;; TEST-CLI-TARGET: codegen errors reader reader

(module Main)
(show 1r0)
